--- a/config/services.yaml
+++ b/config/services.yaml
@@ -23,6 +23,12 @@ services:
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
 
+easy_admin:
+    entities:
+        User:
+            edit:
+                - { property: 'password', type: 'text', type_options: { required: false, empty_data: '' } }    
+
 knp_paginator:
     page_range: 5                      # number of links shown in the pagination menu (e.g: you have 10 pages, a page_range of 3, on the 5th page you'll see links to page 4, 5, 6)
     default_options:
