--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "easycorp/easyadmin-bundle": "^3.5",
         "fakerphp/faker": "^1.19",
         "knplabs/knp-paginator-bundle": "^5.8",
+        "liip/imagine-bundle": "^2.7",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.2",
         "sensio/framework-extra-bundle": "^6.1",
