--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ APP_SECRET=0726deaa71a4fc378f978aec3141e352
 # ##< symfony/framework-bundle ###
 
 # ##> symfony/mailer ###
-MAILER_DSN=smtp://localhost:1025
+# MAILER_DSN=smtp://localhost:1025
 # ##< symfony/mailer ###
 
 # ##> doctrine/doctrine-bundle ###
@@ -27,6 +27,6 @@ MAILER_DSN=smtp://localhost:1025
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 # 
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
+# DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
 # DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 # ##< doctrine/doctrine-bundle ###
