Fix: improve prod workflow

--- a/config/packages/fos_ckeditor.yaml
+++ b/config/packages/fos_ckeditor.yaml
@@ -16,7 +16,7 @@ fos_ck_editor:
                 "clipboard",
                 "lineutils",
                 "widget",
-                "widgetselection"
+                "widgetselection",
                 "wordcount"
             }
             # removePlugins: 'any_plugins'
