--- a/composer.json
+++ b/composer.json
@@ -99,7 +99,7 @@
             "npm run dev"
         ],
         "database-setup": [
-            "php bin/console doctrine:migrations:migrate --no-interaction",
+            "php bin/console d:m:m -n",
             "php bin/console app:create:options",
             "php bin/console app:create:admin admin admin"
         ],
