--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -18,8 +18,8 @@ vich_uploader:
             namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
 
             inject_on_load: false
-            delete_on_update: false
-            delete_on_remove: false
+            # delete_on_update: set in 'dev' & 'prod' folders
+            # delete_on_remove: idem
 
         posts:
             uri_prefix: '%uploads_posts_path%'
