fix: vich_uploader config

--- a/config/packages/dev/vich_uploader.yaml
+++ b/config/packages/dev/vich_uploader.yaml
@@ -1,3 +1,4 @@
-projects:
-    delete_on_update: false
-    delete_on_remove: false
+vich_uploader:
+  projects:
+      delete_on_update: false
+      delete_on_remove: false
