fix: vich_uploader config

--- a/config/packages/dev/vich_uploader.yaml
+++ b/config/packages/dev/vich_uploader.yaml
@@ -1,4 +1,5 @@
 vich_uploader:
   projects:
-      delete_on_update: false
-      delete_on_remove: false
+      mappings:
+        delete_on_update: false
+        delete_on_remove: false
