--- a/config/packages/dev/vich_uploader.yaml
+++ b/config/packages/dev/vich_uploader.yaml
@@ -1,5 +1,6 @@
 vich_uploader:
-  projects:
-      mappings:
-        delete_on_update: false
-        delete_on_remove: false
+    mappings:
+        projects:
+            inject_on_load: false
+            delete_on_update: false
+            delete_on_remove: false
