--- a/config/packages/prod/vich_uploader.yaml
+++ b/config/packages/prod/vich_uploader.yaml
@@ -1,5 +1,6 @@
 vich_uploader:
     mappings:
         projects:
+            inject_on_load: false
             delete_on_update: true
             delete_on_remove: true
