fix: hide secret in .env

--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@
 
 # ##> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=0726deaa71a4fc378f978aec3141e352
+APP_SECRET=***
 # ##< symfony/framework-bundle ###
 
 # ##> symfony/mailer ###
