--- a/config/packages/prod/vich_uploader.yaml
+++ b/config/packages/prod/vich_uploader.yaml
@@ -1,6 +1,49 @@
 vich_uploader:
+    db_driver: orm
+
     mappings:
-        projects:
+
+        authors:
+            uri_prefix: '%uploads_authors_path%'
+            upload_destination: '%kernel.project_dir%/public%uploads_authors_path%'
+            namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
+
+            inject_on_load: false
+            delete_on_update: false
+            delete_on_remove: false
+
+        projects_thumb:
+            uri_prefix: '%uploads_projects_thumb_path%'
+            upload_destination: '%kernel.project_dir%/public%uploads_projects_thumb_path%'
+            namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
+
+            inject_on_load: false
+            delete_on_update: false
+            delete_on_remove: false
+
+        projects_lib:
+            uri_prefix: '%UPLOADS_PROJECTS_GALLERY_path%'
+            upload_destination: '%kernel.project_dir%/public%UPLOADS_PROJECTS_GALLERY_path%'
+            namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
+
             inject_on_load: false
             delete_on_update: true
             delete_on_remove: true
+
+        posts:
+            uri_prefix: '%uploads_posts_path%'
+            upload_destination: '%kernel.project_dir%/public%uploads_posts_path%'
+            namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
+
+            inject_on_load: false
+            delete_on_update: false
+            delete_on_remove: false
+        
+        lessons:
+            uri_prefix: '%uploads_lessons_path%'
+            upload_destination: '%kernel.project_dir%/public%uploads_lessons_path%'
+            namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
+
+            inject_on_load: false
+            delete_on_update: false
+            delete_on_remove: false
