--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,9 @@
         "easycorp/easyadmin-bundle": "^3.5",
         "fakerphp/faker": "^1.19",
         "friendsofsymfony/ckeditor-bundle": "^2.4",
+        "guzzlehttp/guzzle": "^7.0.1",
+        "http-interop/http-factory-guzzle": "^1.0",
+        "knplabs/github-api": "^3.0",
         "liip/imagine-bundle": "^2.7",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.2",
