--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,8 @@ yarn-error.log
 
 ###> uploads ###
 public/uploads/projects/*
+!public/uploads/projects/thumbnail
+public/uploads/projects/thumbnail/*
 !public/uploads/projects/thumbnail/placeholder.png
 
 public/uploads/posts/*
