clean CKEDitor setup

--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
         "@ckeditor/ckeditor5-build-classic": "^34.0.0",
         "@ckeditor/ckeditor5-code-block": "^34.0.0",
         "@ckeditor/ckeditor5-dev-webpack-plugin": "^30.1.3",
+        "@ckeditor/ckeditor5-find-and-replace": "^34.0.0",
+        "@ckeditor/ckeditor5-font": "^34.0.0",
+        "@ckeditor/ckeditor5-horizontal-line": "^34.0.0",
+        "@ckeditor/ckeditor5-source-editing": "^34.0.0",
         "@ckeditor/ckeditor5-theme-lark": "^34.0.0",
         "@ckeditor/ckeditor5-word-count": "^34.0.0",
         "@popperjs/core": "^2.11.2",
