--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,8 +4,9 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    uploads_adminoptions_path: !php/const App\Path::UPLOADS_ADMIN_OPTIONS
     uploads_authors_path: !php/const App\Path::UPLOADS_AUTHORS
-    UPLOADS_PROJECTS_GALLERY_path: !php/const App\Path::UPLOADS_PROJECTS_GALLERY
+    uploads_projects_gallery_path: !php/const App\Path::UPLOADS_PROJECTS_GALLERY
     uploads_projects_thumb_path: !php/const App\Path::UPLOADS_PROJECTS_THUMB
     uploads_posts_path: !php/const App\Path::UPLOADS_POSTS
     uploads_lessons_path: !php/const App\Path::UPLOADS_LESSONS
