--- a/config/services.yaml
+++ b/config/services.yaml
@@ -26,5 +26,8 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
 
-    # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
+    app.listener.compression:
+        class: App\Event\CompressionListener
+        arguments:
+        tags:
+            - { name: kernel.event_subscriber }
