fixed: added uploads folder to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -41,4 +41,4 @@ public/uploads/admin/options/logo.png
 public/uploads/admin/options/favicon.ico
 
 /public/media/cache/
-public/uploads/ckfinder/.ckfinder/
+public/uploads/ckfinder/
