--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
         "@popperjs/core": "^2.11.2",
         "bootstrap": "^5.1.3",
         "fitvids": "^2.1.1",
-        "flexslider-conditional-before": "^2.6.4",
+        "flexslider": "^2.7.2",
         "highlight.js": "^11.5.1",
         "intersection-observer": "^0.12.0",
         "isotope-layout": "^3.0.6",
