feat: contact emails

--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ APP_SECRET=***
 # ##< symfony/framework-bundle ###
 
 # ##> symfony/mailer ###
-MAILER_DSN=smtp://localhost:1025
+MAILER_DSN=smtp://user:pass@smtp.localhost:1025
 # ##< symfony/mailer ###
 
 # ##> doctrine/doctrine-bundle ###
