Added Bash language to CKEditor

--- a/.env
+++ b/.env
@@ -31,7 +31,7 @@ DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5
 # DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 # ##< doctrine/doctrine-bundle ###
 
-###> knplabs/github-api ###
+###> knplabs/github-api ###root
 GITHUB_AUTH_METHOD=http_password
 GITHUB_USERNAME=username
 GITHUB_SECRET=password_or_token
